; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_gen_estimator.c_gen_kill_estimator.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_gen_estimator.c_gen_kill_estimator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gnet_stats_basic_packed = type { i32 }
%struct.gnet_stats_rate_est = type { i32 }
%struct.gen_estimator = type { i32, i32, i32*, i32 }

@est_root = common dso_local global i32 0, align 4
@est_lock = common dso_local global i32 0, align 4
@__gen_kill_estimator = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gen_kill_estimator(%struct.gnet_stats_basic_packed* %0, %struct.gnet_stats_rate_est* %1) #0 {
  %3 = alloca %struct.gnet_stats_basic_packed*, align 8
  %4 = alloca %struct.gnet_stats_rate_est*, align 8
  %5 = alloca %struct.gen_estimator*, align 8
  store %struct.gnet_stats_basic_packed* %0, %struct.gnet_stats_basic_packed** %3, align 8
  store %struct.gnet_stats_rate_est* %1, %struct.gnet_stats_rate_est** %4, align 8
  br label %6

6:                                                ; preds = %11, %2
  %7 = load %struct.gnet_stats_basic_packed*, %struct.gnet_stats_basic_packed** %3, align 8
  %8 = load %struct.gnet_stats_rate_est*, %struct.gnet_stats_rate_est** %4, align 8
  %9 = call %struct.gen_estimator* @gen_find_node(%struct.gnet_stats_basic_packed* %7, %struct.gnet_stats_rate_est* %8)
  store %struct.gen_estimator* %9, %struct.gen_estimator** %5, align 8
  %10 = icmp ne %struct.gen_estimator* %9, null
  br i1 %10, label %11, label %26

11:                                               ; preds = %6
  %12 = load %struct.gen_estimator*, %struct.gen_estimator** %5, align 8
  %13 = getelementptr inbounds %struct.gen_estimator, %struct.gen_estimator* %12, i32 0, i32 3
  %14 = call i32 @rb_erase(i32* %13, i32* @est_root)
  %15 = call i32 @write_lock_bh(i32* @est_lock)
  %16 = load %struct.gen_estimator*, %struct.gen_estimator** %5, align 8
  %17 = getelementptr inbounds %struct.gen_estimator, %struct.gen_estimator* %16, i32 0, i32 2
  store i32* null, i32** %17, align 8
  %18 = call i32 @write_unlock_bh(i32* @est_lock)
  %19 = load %struct.gen_estimator*, %struct.gen_estimator** %5, align 8
  %20 = getelementptr inbounds %struct.gen_estimator, %struct.gen_estimator* %19, i32 0, i32 1
  %21 = call i32 @list_del_rcu(i32* %20)
  %22 = load %struct.gen_estimator*, %struct.gen_estimator** %5, align 8
  %23 = getelementptr inbounds %struct.gen_estimator, %struct.gen_estimator* %22, i32 0, i32 0
  %24 = load i32, i32* @__gen_kill_estimator, align 4
  %25 = call i32 @call_rcu(i32* %23, i32 %24)
  br label %6

26:                                               ; preds = %6
  ret void
}

declare dso_local %struct.gen_estimator* @gen_find_node(%struct.gnet_stats_basic_packed*, %struct.gnet_stats_rate_est*) #1

declare dso_local i32 @rb_erase(i32*, i32*) #1

declare dso_local i32 @write_lock_bh(i32*) #1

declare dso_local i32 @write_unlock_bh(i32*) #1

declare dso_local i32 @list_del_rcu(i32*) #1

declare dso_local i32 @call_rcu(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
